--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "monolog/monolog": "^3.9",
         "openai-php/laravel": "^0.11.0",
+        "phpoffice/phpspreadsheet": "^4.3",
         "smalot/pdfparser": "^2.12"
     },
     "require-dev": {
